--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -4,11 +4,9 @@
   <PropertyGroup>
     <LangVersion>preview</LangVersion>
   </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="Nerdbank.GitVersioning">
-      <Version>3.0.50</Version>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-    <!--<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All"/>-->
-  </ItemGroup>
+  <!--
+    <ItemGroup>
+      <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All"/>
+    </ItemGroup>
+  -->
 </Project>
