--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,4 +41,16 @@ jobs:
               if: github.event_name == 'push' && github.ref == 'refs/heads/master'
               uses: NuGet/setup-nuget@v1.0.2
               with:
-                  nuget-version: latest         
+                  nuget-version: latest    
+           
+            - name: Publish NuGet
+              uses: rohith/publish-nuget@v2.1.1
+              with:
+                PROJECT_FILE_PATH: Core/Core.csproj # Relative to repository root
+                VERSION_FILE_PATH: Directory.Build.props # Filepath with version info, relative to repository root. Defaults to project file
+                # VERSION_REGEX: <Version>(.*)<\/Version> # Regex pattern to extract version info in a capturing group
+                # TAG_COMMIT: true # Flag to enable / disalge git tagging
+                # TAG_FORMAT: v* # Format of the git tag, [*] gets replaced with version
+                # NUGET_KEY: ${{secrets.NUGET_API_KEY}} # nuget.org API key
+                PACKAGE_NAME: Solrevdev.InstagramBasicDisplay
+
