--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,6 +3,7 @@
   xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <LangVersion>preview</LangVersion>
+    <Version>1.0.0</Version>
   </PropertyGroup>
   <!--
     <ItemGroup>
