--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,6 @@ jobs:
                 # VERSION_REGEX: <Version>(.*)<\/Version> # Regex pattern to extract version info in a capturing group
                 # TAG_COMMIT: true # Flag to enable / disable git tagging
                 # TAG_FORMAT: v* # Format of the git tag, [*] gets replaced with version
-                # NUGET_KEY: ${{secrets.NUGET_API_KEY}} # nuget.org API key
+                NUGET_KEY: ${{secrets.NUGET_API_KEY}} # nuget.org API key
                 PACKAGE_NAME: Solrevdev.InstagramBasicDisplay
 
