--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
               uses: rohith/publish-nuget@v2.1.1
               with:
                 PROJECT_FILE_PATH: src/Core/Core.csproj # Relative to repository root
-                VERSION_FILE_PATH: Directory.Build.props # Filepath with version info, relative to repository root. Defaults to project file
+                # VERSION_FILE_PATH: Directory.Build.props # Filepath with version info, relative to repository root. Defaults to project file
                 # VERSION_REGEX: <Version>(.*)<\/Version> # Regex pattern to extract version info in a capturing group
                 # TAG_COMMIT: true # Flag to enable / disable git tagging
                 # TAG_FORMAT: v* # Format of the git tag, [*] gets replaced with version
