--- a/samples/Web/appsettings.Development.json
+++ b/samples/Web/appsettings.Development.json
@@ -10,8 +10,6 @@
     "Name": "Development - Instagram Basic Display API Credentials",
     "ClientId": "",
     "ClientSecret": "",
-    "RedirectUrl": "",
-    "Scheme": "",
-    "Domain": ""
+    "RedirectUrl": ""
   }
 }
