--- a/samples/Web/appsettings.json
+++ b/samples/Web/appsettings.json
@@ -11,8 +11,6 @@
     "Name": "Production - Instagram Basic Display API Credentials",
     "ClientId": "",
     "ClientSecret": "",
-    "RedirectUrl": "",
-    "Scheme": "",
-    "Domain": ""
+    "RedirectUrl": ""
   }
 }
