fixes #2 GetJsonAsync does not handle errors from Instagram.

--- a/tests/Core.Tests/Core.Tests.csproj
+++ b/tests/Core.Tests/Core.Tests.csproj
@@ -25,6 +25,8 @@
 
   <ItemGroup>
     <None Update="GetMediaListAsync.json" CopyToOutputDirectory="PreserveNewest" />
+    <None Update="IGApiException.json" CopyToOutputDirectory="PreserveNewest" />
+    <None Update="OAuthException.json" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
 </Project>
