--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,14 +5,30 @@ on:
         branches:
             - master
             - release/*
+        paths-ignore:
+          - '**/*.md'
+          - '**/*.gitignore'
+          - '**/*.gitattributes'
     pull_request:
         branches:
             - master
             - release/*
+        paths-ignore:
+          - '**/*.md'
+          - '**/*.gitignore'
+          - '**/*.gitattributes'
 
 jobs:
     build:
+        if: github.event_name == 'push' && contains(toJson(github.event.commits), '***NO_CI***') == false && contains(toJson(github.event.commits), '[ci skip]') == false && contains(toJson(github.event.commits), '[skip ci]') == false
         runs-on: windows-latest
+        env:
+          DOTNET_CLI_TELEMETRY_OPTOUT: 1
+          DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
+          DOTNET_NOLOGO: true
+          DOTNET_GENERATE_ASPNET_CERTIFICATE: false
+          DOTNET_ADD_GLOBAL_TOOLS_TO_PATH: false
+          DOTNET_MULTILEVEL_LOOKUP: 0
 
         steps:
             - name: checkout code
