chore: cspell [skip ci]

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,53 +1,55 @@
 {
-  "cSpell.words": [
-    "ASPNETCORE",
-    "Deauthorize",
-    "Deserialize",
-    "Nerdbank",
-    "Serializer",
-    "Solrevdev",
-    "Xunit",
-    "aarnott",
-    "appsettings",
-    "bhfyp",
-    "catlover",
-    "catlovers",
-    "catoftheday",
-    "catsagram",
-    "catsofinstagram",
-    "catstagram",
-    "cdnjs",
-    "crossorigin",
-    "fbtrace",
-    "gitversioning",
-    "instacat",
-    "instagood",
-    "instagramapi",
-    "lazysizes",
-    "lovecats",
-    "markdownit",
-    "netstandard",
-    "nuget",
-    "nupkg",
-    "petstagram",
-    "photooftheday",
-    "querystring",
-    "setapikey",
-    "socio",
-    "tabindex",
-    "userid",
-    "vuejs"
-  ],
-  "files.exclude": {
-    "**/bin": true,
-    "**/obj": true,
-    ".vscode": false,
-    ".vs": true,
-    ".gitignore": false,
-    ".gitattributes": false,
-    ".prettierrc": false,
-    ".editorconfig": false,
-    "omnisharp.json": false,
-    "global.json": false
-  }
+    "cSpell.words": [
+        "aarnott",
+        "appsettings",
+        "ASPNETCORE",
+        "bhfyp",
+        "catlover",
+        "catlovers",
+        "catoftheday",
+        "catsagram",
+        "catsofinstagram",
+        "catstagram",
+        "cdnjs",
+        "cref",
+        "crossorigin",
+        "Deauthorize",
+        "Deserialize",
+        "fbtrace",
+        "gitversioning",
+        "instacat",
+        "instagood",
+        "instagramapi",
+        "lazysizes",
+        "lovecats",
+        "markdownit",
+        "Nerdbank",
+        "netstandard",
+        "nuget",
+        "nupkg",
+        "petstagram",
+        "photooftheday",
+        "querystring",
+        "Serializer",
+        "setapikey",
+        "socio",
+        "Solrevdev",
+        "Subcode",
+        "tabindex",
+        "userid",
+        "vuejs",
+        "Xunit"
+    ],
+    "files.exclude": {
+        "**/bin": true,
+        "**/obj": true,
+        ".vscode": false,
+        ".vs": true,
+        ".gitignore": false,
+        ".gitattributes": false,
+        ".prettierrc": false,
+        ".editorconfig": false,
+        "omnisharp.json": false,
+        "global.json": false
+    }
 }
